force-app/main/default/objects/Site_Visit__c/fields/Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes__c</fullName>
    <label>Visit Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>