force-app/main/default/objects/Site_Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Home Visit</fullName>
            </value>
            <value>
                <fullName>Virtual Visit</fullName>
            </value>
            <value>
                <fullName>QR Code</fullName>
                <isActive>false</isActive>
                <label>QR Code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>