force-app/main/default/objects/Site_Visit__c/fields/WhatsApp_Message_DateTime__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Message_DateTime__c</fullName>
    <label>WhatsApp Message DateTime</label>
    <type>DateTime</type>
</CustomField>