force-app/main/default/objects/Site_Visit__c/fields/WhatsApp_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Message_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Message Sent</label>
    <type>Checkbox</type>
</CustomField>