force-app/main/default/objects/Site_Visit__c/validationRules/GRE_Restrict_Source_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>GRE_Restrict_Source_Edit</fullName>
    <active>true</active>
    <description>Prevents GRE users from editing the Source (Lead Source) on an existing Site Visit. Creation is unaffected (NOT ISNEW); leadNotExists sets Source__c only on insert.</description>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;GRE&quot;,
    NOT(ISNEW()),
    ISCHANGED(Source__c)
)</errorConditionFormula>
    <errorMessage>You do not have access to edit the Source. Please contact your administrator.</errorMessage>
</ValidationRule>