force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Status__c</columns>
    <columns>Site_Visit_Type__c</columns>
    <columns>Date__c</columns>
    <columns>SV_Completed_Date_Time__c</columns>
    <columns>Project__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>