force-app/main/default/objects/Site_Visit__c/listViews/Today_s_Pending_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Today_s_Pending_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Status__c</columns>
    <columns>Site_Visit_Type__c</columns>
    <columns>Date__c</columns>
    <columns>SV_Completed_Date_Time__c</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Today&apos;s Pending Site Visits</label>
</ListView>